// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchHit should render SearchHit successfully 1`] = `
<body>
  <div>
    <div
      class="ds-card"
      data-variant="default"
    >
      <a
        href="Search hit title href"
      >
        <h2
          class="title"
        >
          Search hit title
        </h2>
      </a>
      Search hit content
    </div>
  </div>
</body>
`;

exports[`SearchHit should render SearchHit with empty title successfully 1`] = `
<body>
  <div>
    <div
      class="ds-card"
      data-variant="default"
    >
      <a
        href=""
      >
        <h2
          class="title"
        >
          Uten navn
        </h2>
      </a>
    </div>
  </div>
</body>
`;
